# PatchSelectorPlugin

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.it.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
JUCE/modules/juce_audio_plugin_client/VST3/: juce_VST3ManifestHelper.mm
JUCE/modules/juce_audio_processors_headless/: juce_audio_processors_headless_ara.cpp  juce_audio_processors_headless_lv2_libs.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/midi/: MidiDispatchEngine.cpp  MidiDispatchEngine.h
Source/model/: PatchLibrary.h
Source/repository/: PatchLibraryLoader.cpp  PatchLibraryLoader.h
resources/: example-library.json
